# pic2pic-nextgen

./: .gitignore  LICENSE  README.md  pic2pic_nextgen_architecture_manifesto.py  pix2pix_core.py
backend/: requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py  websocket.py
backend/app/core/: __init__.py  engine.py  self_healing.py
backend/tests/: __init__.py  test_api.py  test_engine.py  test_self_healing.py
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
web-client/: package.json  prettier.config.js  tailwind.config.js
web-client/src/: app.css  app.html
web-client/src/lib/: index.ts
web-client/src/lib/components/: DNAEditor.svelte  Gallery.svelte  HoloLab.svelte  Metrics.svelte  Navigation.svelte  Presets.svelte  Queue.svelte  Upload.svelte
web-client/src/lib/stores/: index.ts
web-client/src/lib/utils/: websocket.ts
web-client/src/routes/: +layout.svelte  +page.svelte
