[package]
name = "pic2pic-nextgen"
version = "2.0.0"
description = "Holographic Image Reconstruction Desktop App"
authors = ["MASSIVEMAGNETICS"]
edition = "2021"

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
